--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,48 @@
+body{
+    font-family: Helvetica;
+    margin: 0;
+    width: 100%;
+    overflow: hidden;
+}
 
-/*.container{
-    padding: 35px 30px;
-}*/
-
-/* .svg-header{
+.display{
     display: flex;
     justify-content: space-between;
-    padding-bottom: 1vh;
-
+    align-items: center;
 }
+
 .header-text{
     font-size: 25px;
     margin: 0;
 }
-.text{
 
+.card-group{
+    white-space: nowrap;
+    padding-left: 30px;
+    padding-top: 10px;
+    overflow: hidden;
 }
 .button-area{
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid black;
+    padding: 20px 10px 10px 10px;
 }
 
 .text-button{
-    width: 90px;
+    width: 80px;
     font-size: 13px;
-    padding: 9px 15px;
+    padding: 6px 10px;
+    border: 1px solid rgba(175, 175, 175, 0.5);
     border-radius: 25px;
 }
-
-.sub-line{
-    display: flex;
-    justify-content: space-between;
-}  */
-body{
-    font-family: Helvetica;
-    margin: 0;
+.card{
+    margin-right: 10px;
+    display: inline-flex;
+    padding-top: 30px;
+    padding-left: 10px;
+    font-size: 20px;
+    height: 200px;
+    width: 33%;
+    border: 1px solid rgba(175, 175, 175, 0.5);
+    border-radius: 30px;
 }
 
 h1{
@@ -46,23 +51,26 @@ h1{
     padding-top: 170px;
 }
 .container{
-    padding: 25px 20px;
+    padding: 35px 25px 0 25px;
 }
 .header{
-    padding: 10px;
+    padding: 10px 20px 10px 10px;
 }
 .content{
     padding-top: 20px;
 }
 .content-button{
     display: flex;
+    background-color: transparent;
+    width: 100%;
+    text-align: left;
     margin-bottom: 25px;
     padding: 20px 20px 20px 20px;
-    height: 80px;
     border: 1px solid rgba(175, 175, 175, 0.5);
     border-radius: 30px;
     align-items: center;
 }
+
 h4{
     font-size: 20px;
     margin: 0;
@@ -70,4 +78,18 @@ h4{
 .content-button p{
     margin: 10px 0 0 0;
     color: rgb(163, 163, 163);
+}
+.icon-button{
+    background: transparent;
+    border: 1px solid rgba(175, 175, 175, 0.5);
+    border-radius: 20px;
+    padding: 10px;
+}
+.icon-button h4{
+    font-size: 15px;
+    text-align: left !important;
+}
+
+.botton-page{
+    padding-bottom: 35px;
 }
